# fastapi_cookie_auth

./: .gitignore  PYPI_PUBLICATION.md  README.md  pyproject.toml  setup.py  test-requirements.txt
example/: main.py  requirements.txt
example/auth/: __init__.py  constants.py
example/static/css/: styles.css
example/templates/: admin_users.html  base.html  index.html  login.html  protected.html  sessions.html  superadmin_only.html
fastapi_cookie_auth/: __init__.py  decorators.py  login_manager.py  user_mixin.py
fastapi_cookie_auth/utils/: __init__.py  config.py  crypto.py  revocation.py  storage.py
tests/: test.py
